# xvita

./: .gitignore  CMakeLists.txt  LICENSE  README.md  xvita.yml
cmake/: CompilerWarnings.cmake  Vita.cmake
include/: logger.h
src/: logger.c  main.c
